Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-13821

mariabackup does not display ib_logf() messages

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.1(EOL)
    • 10.1.27
    • Backup
    • None

    Description

      This buildbot log on Windows proves that Mariabackup is not displaying the ib_logf() message that was output by fil_report_invalid_page_access().

      At least the fatal, error, and warning messages should be displayed.

      Attachments

        Issue Links

          Activity

            People

              wlad Vladislav Vaintroub
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: