MDEV-13821 : mariabackup sometimes could lose ib_logf(FATAL) messages,

The messages are getting lost because they are written with fprintf()
but without fflush(), so abort() would lose buffered text.

Applied fix from 10.2, which makes in_logf() use
sql_print_information(), which in turn does proper flush after each message